--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	    <meta name="keywords" content="">
 	    <meta name="description" content="">
 
-	    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-	    <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css">
-	    <link rel="stylesheet" type="text/css" href="css/vendor.css">
+	    <link rel="stylesheet" type="text/css" href="normalize.css">
+	    <link rel="stylesheet" type="text/css" href="icomoon.css">
+	    <link rel="stylesheet" type="text/css" href="vendor.css">
 	    <link rel="stylesheet" type="text/css" href="style.css">
 
 		<!-- script
 		================================================== -->
-		<script src="js/modernizr.js"></script>
+		<script src="modernizr.js"></script>
 
 	</head>
 
