--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 			    <h1>Hi. This is your second website...</h1>
-								    <p>This is a simple Paragraph.</p>
+		<a href="https://afaqali0317.github.io/myfirstweb">Next Repository</a>						    <p>This is a simple Paragraph.</p>
 								
 </body>
 </html>	
