--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 	<head>
-		<title>MySexondWebsite</title>
+		<title>MySecondWebsite</title>
 		
 
 	</head>
